...
        app:layout_constraintBottom_toTopOf="@id/task_list_item_divider"
        android:src="@drawable/bkg_oval"
        tools:tint="@color/marigold"
        />

    <TextView
        android:id="@+id/task_list_item_task_name_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="Nourrir les chats"
        android:textSize="20sp"
        android:layout_margin="8dp"
        app:chainUseRtl="true"
        app:layout_constraintVertical_chainStyle="packed"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/task_list_item_project_name_tv"
        app:layout_constraintEnd_toStartOf="@id/task_list_item_delete_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/task_list_item_circle_image"
        />

    <TextView
        android:id="@+id/task_list_item_project_name_tv"
...
